--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
             </div>
         </div>
     </section>
-    <section class="row controls">
-        <div class="small-12 columns">
-            <button id="start-game">START NEW GAME</button>
-        </div>
-    </section>
-    <section class="row controls">
-        <div class="small-12 columns">
-            <button id="attack">ATTACK</button>
-            <button id="special-attack">SPECIAL ATTACK</button>
-            <button id="heal">HEAL</button>
-            <button id="give-up">GIVE UP</button>
-        </div>
-    </section>
+   
+        <section class="row controls" v-if="showStart">
+            <div class="small-12 columns">
+                <button id="start-game" @click="showStart=false">START NEW GAME</button>
+            </div>
+        </section>
+    
+   
+        <section class="row controls" v-else>
+            <div class="small-12 columns">
+                <button id="attack">ATTACK</button>
+                <button id="special-attack">SPECIAL ATTACK</button>
+                <button id="heal">HEAL</button>
+                <button id="give-up">GIVE UP</button>
+            </div>
+        </section>
+  
     <section class="row log">
         <div class="small-12 columns">
             <ul>
@@ -49,5 +53,7 @@
         </div>
     </section>
 </div>
+<script src="https://npmcdn.com/vue/dist/vue.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
